--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "expo-font": "^9.2.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-paper": "^4.9.2",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
