--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,8 @@ target 'MealsToGo' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
+
   target 'MealsToGoTests' do
     inherit! :complete
     # Pods for testing
