--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
-    "expo-font": "^9.2.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.0.1",
+    "@react-navigation/material-bottom-tabs": "^6.0.1",
+    "@react-navigation/native": "^6.0.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-paper": "^4.9.2",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-navigation-material-bottom-tabs": "^2.3.4",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
