--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.0.1",
     "@react-navigation/material-bottom-tabs": "^6.0.1",
     "@react-navigation/native": "^6.0.1",
+    "camelize": "^1.0.0",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-paper": "^4.9.2",
