--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@react-navigation/bottom-tabs": "^6.0.1",
     "@react-navigation/material-bottom-tabs": "^6.0.1",
     "@react-navigation/native": "^6.0.1",
+    "@react-navigation/native-stack": "^6.0.5",
+    "@react-navigation/stack": "^6.0.6",
     "camelize": "^1.0.0",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-paper": "^4.9.2",
     "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.5.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-navigation-material-bottom-tabs": "^2.3.4",
