--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@ant-design/react-native": "^4.2.0",
+    "@react-native-async-storage/async-storage": "^1.15.6",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.0.1",
     "@react-navigation/material-bottom-tabs": "^6.0.1",
@@ -17,13 +19,16 @@
     "@react-navigation/native-stack": "^6.0.5",
     "@react-navigation/stack": "^6.0.6",
     "camelize": "^1.0.0",
+    "firebase": "^8.9.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-maps": "^0.28.0",
     "react-native-paper": "^4.9.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.5.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.13.0",
     "react-navigation-material-bottom-tabs": "^2.3.4",
     "styled-components": "^5.3.0"
   },
