--- a/ios/MealsToGo/Info.plist
+++ b/ios/MealsToGo/Info.plist
@@ -72,5 +72,11 @@
 		<string>antfill.ttf</string>
 		<string>antoutline.ttf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+    <string>For taking photos</string>
+
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>For saving photos</string>
+	
 </dict>
 </plist>
