--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,5 +30,9 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+
+      <meta-data
+    android:name="com.google.android.geo.API_KEY"
+    android:value="AIzaSyD7PN68H0fIFlTEtabGpb2bdVVQVDJmjq4"/>
     </application>
 </manifest>
