--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-camera": "^4.0.3",
+    "react-native-image-picker": "^4.0.6",
     "react-native-maps": "^0.28.0",
     "react-native-paper": "^4.9.2",
     "react-native-safe-area-context": "^3.2.0",
