--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/react-native": "^4.2.0",
+    "@googlemaps/google-maps-services-js": "^3.1.16",
     "@react-native-async-storage/async-storage": "^1.15.6",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.0.1",
