--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-camera": "^4.0.3",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-image-picker": "^4.0.6",
     "react-native-maps": "^0.28.0",
     "react-native-paper": "^4.9.2",
@@ -33,6 +34,7 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^11.13.0",
     "react-navigation-material-bottom-tabs": "^2.3.4",
+    "stripe-client": "^1.1.5",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
